--- a/homeworks/html-css/week01/Resume/index.html
+++ b/homeworks/html-css/week01/Resume/index.html
@@ -9,72 +9,80 @@
   <body>
     <div class="container">
       <h1>CV Badr Alaref</h1>
-      <img class="img" src="IMG-20230922-WA0000.jpg" alt="Badr Alaref Photo" />
-      <p>
-        <p>Email: frizydawg@puremail.com</p>
-        <p>Address: 3998 Moonlight Drive, parnegat, NJ 08005</p>
-        <p>Telephone Numper: 609-660-5509</p>
-        <p>Mobile Number: 609-312-2422</p> 
-      </p>
+      <div class="contact-info">
+        <div>Email: frizydawg@puremail.com</div>
+        <div>Address: 3998 Moonlight Drive, Barnegat, NJ 08005</div>
+        <div>Telephone Number: 609-660-5509</div>
+        <div>Mobile Number: 609-312-2422</div>
+      </div>
       <hr>
       <h2>Personal Information</h2>
       <p>
-        Hi, My name is Badr Alaref and I am Born on the 15th of June 1995. I
+        Hi, My name is Badr Alaref and I am born on the 15th of June 1995. I
         come from Syria and have been living here in Sweden since October 2015.
         My free time hobbies include working out, cycling, adventuring, and
         travel.
       </p>
       <hr>
       <h2>Work Experience</h2>
-      <ul>
-        <li>
-          <p>T Fashion AB, Office Worker<span class="span">(July 2022 - July 2023)</span></p>
-          ><pr>
-          As an office worker, my duties include customer services, email
-          responses, processing refunds, picking up calls, contacting shipping
-          agencies, arranging appointments, and poard meetings.
-        </li>
-        <li>
-          <p>T Fashion AB, Logistics<span class="span">(July 2021 - July 2023)</span></p>
-          <pr />As a logistics worker, my role includes collecting goods,
-          packing items for delivery, <pr />refunding returned orders, and
-          maintaining workplace tidiness.
-        </li>
-        <li>
-          <p>Delivery-perfection Denmark, Courier <span class="span">(Novemper 2020 - June 2021)</span></p>
-        </li>
-        <li>
-          <p>Delivery Hero, Foodora Rider<span class="span">(Octoper 2019 - Novemper 2020)</span></p>
-          <br>My role as a food courier involves delivery and direct contact
-          with restaurants and customers, following traffic laws for road
-          safety.
-        </li>
-        <li>
-          <p>Middle East Restaurant, Restaurant Assistant</p>
-          <span>(January 2017 - Octoper 2019)</span>
-          <br>
-          My role as a restaurant assistant includes serving taples,
-          maintaining cleanliness, organizing, and preparing dishes for
-          customers.
-        </li>
-      </ul>
+      <div class="work-experience">
+        <div>
+          <h3>T Fashion AB, Office Worker</h3>
+          <span class="date">(July 2022 - July 2023)</span>
+          <p>
+            As an office worker, my duties include customer services, email
+            responses, processing refunds, picking up calls, contacting shipping
+            agencies, arranging appointments, and board meetings.
+          </p>
+        </div>
+        <div>
+          <h3>T Fashion AB, Logistics</h3>
+          <span class="date">(July 2021 - July 2023)</span>
+          <p>
+            As a logistics worker, my role includes collecting goods, packing
+            items for delivery, refunding returned orders, and maintaining
+            workplace tidiness.
+          </p>
+        </div>
+        <div>
+          <h3>Delivery-perfection Denmark, Courier</h3>
+          <span class="date">(November 2020 - June 2021)</span>
+        </div>
+        <div>
+          <h3>Delivery Hero, Foodora Rider</h3>
+          <span class="date">(October 2019 - November 2020)</span>
+          <p>
+            My role as a food courier involves delivery and direct contact
+            with restaurants and customers, following traffic laws for road
+            safety.
+          </p>
+        </div>
+        <div>
+          <h3>Middle East Restaurant, Restaurant Assistant</h3>
+          <span class="date">(January 2017 - October 2019)</span>
+          <p>
+            My role as a restaurant assistant includes serving tables,
+            maintaining cleanliness, organizing, and preparing dishes for
+            customers.
+          </p>
+        </div>
+      </div>
       <hr>
       <h2>Education</h2>
-      <ul>
-        <li>
+      <div class="education">
+        <div>
           <h3>IntensivePT.se, Personal Trainer and Nutritional Advisor</h3>
-          <span>(July 2020 - May 2021)</span>
-        </li>
-        <li>
-          <h3>Eductus Ap, Professional Swedish with Specialization in Service and
-            Trade</h3>
-          <span>(August 2017 - Decemper 2017)</span>
-        </li>
-        <li>
+          <span class="date">(July 2020 - May 2021)</span>
+        </div>
+        <div>
+          <h3>Eductus AB, Professional Swedish with Specialization in Service and Trade</h3>
+          <span class="date">(August 2017 - December 2017)</span>
+        </div>
+        <div>
           <h3>High School Diploma, Science Studies</h3>
-          <span>(Class of 2013)</span>
-        </li>
-      </ul>
+          <span class="date">(Class of 2013)</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
