--- a/homeworks/html-css/week01/Resume/index.html
+++ b/homeworks/html-css/week01/Resume/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <img src="img.jpg" alt="Badr Alaref photo">
     <div class="container">
       <h1>CV Badr Alaref</h1>
       <div class="contact-info">
