--- a/homeworks/html-css/week01/Resume/index.html
+++ b/homeworks/html-css/week01/Resume/index.html
@@ -7,83 +7,85 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <img src="img.jpg" alt="Badr Alaref photo">
-    <div class="container">
-      <h1>CV Badr Alaref</h1>
-      <div class="contact-info">
-        <div>Email: frizydawg@puremail.com</div>
-        <div>Address: 3998 Moonlight Drive, Barnegat, NJ 08005</div>
-        <div>Telephone Number: 609-660-5509</div>
-        <div>Mobile Number: 609-312-2422</div>
+    <header>
+      <img src="img.jpg" alt="Badr Alaref photo">
+      <div class="container">
+        <h1>CV Badr Alaref</h1>
+        <div class="contact-info">
+          <div>Email: frizydawg@puremail.com</div>
+          <div>Address: 3998 Moonlight Drive, Barnegat, NJ 08005</div>
+          <div>Telephone Number: 609-660-5509</div>
+          <div>Mobile Number: 609-312-2422</div>
+        </div>
+        <hr>
+        <h2>Personal Information</h2>
+        <p>
+          Hi, My name is Badr Alaref and I am born on the 15th of June 1995. I
+          come from Syria and have been living here in Sweden since October 2015.
+          My free time hobbies include working out, cycling, adventuring, and
+          travel.
+        </p>
+        <hr>
+        <h2>Work Experience</h2>
+        <div class="work-experience">
+          <div>
+            <h3>T Fashion AB, Office Worker</h3>
+            <span class="date">(July 2022 - July 2023)</span>
+            <p>
+              As an office worker, my duties include customer services, email
+              responses, processing refunds, picking up calls, contacting shipping
+              agencies, arranging appointments, and board meetings.
+            </p>
+          </div>
+          <div>
+            <h3>T Fashion AB, Logistics</h3>
+            <span class="date">(July 2021 - July 2023)</span>
+            <p>
+              As a logistics worker, my role includes collecting goods, packing
+              items for delivery, refunding returned orders, and maintaining
+              workplace tidiness.
+            </p>
+          </div>
+          <div>
+            <h3>Delivery-perfection Denmark, Courier</h3>
+            <span class="date">(November 2020 - June 2021)</span>
+          </div>
+          <div>
+            <h3>Delivery Hero, Foodora Rider</h3>
+            <span class="date">(October 2019 - November 2020)</span>
+            <p>
+              My role as a food courier involves delivery and direct contact
+              with restaurants and customers, following traffic laws for road
+              safety.
+            </p>
+          </div>
+          <div>
+            <h3>Middle East Restaurant, Restaurant Assistant</h3>
+            <span class="date">(January 2017 - October 2019)</span>
+            <p>
+              My role as a restaurant assistant includes serving tables,
+              maintaining cleanliness, organizing, and preparing dishes for
+              customers.
+            </p>
+          </div>
+        </div>
+        <hr>
+        <h2>Education</h2>
+        <div class="education">
+          <div>
+            <h3>IntensivePT.se, Personal Trainer and Nutritional Advisor</h3>
+            <span class="date">(July 2020 - May 2021)</span>
+          </div>
+          <div>
+            <h3>Eductus AB, Professional Swedish with Specialization in Service and Trade</h3>
+            <span class="date">(August 2017 - December 2017)</span>
+          </div>
+          <div>
+            <h3>High School Diploma, Science Studies</h3>
+            <span class="date">(Class of 2013)</span>
+          </div>
+        </div>
       </div>
-      <hr>
-      <h2>Personal Information</h2>
-      <p>
-        Hi, My name is Badr Alaref and I am born on the 15th of June 1995. I
-        come from Syria and have been living here in Sweden since October 2015.
-        My free time hobbies include working out, cycling, adventuring, and
-        travel.
-      </p>
-      <hr>
-      <h2>Work Experience</h2>
-      <div class="work-experience">
-        <div>
-          <h3>T Fashion AB, Office Worker</h3>
-          <span class="date">(July 2022 - July 2023)</span>
-          <p>
-            As an office worker, my duties include customer services, email
-            responses, processing refunds, picking up calls, contacting shipping
-            agencies, arranging appointments, and board meetings.
-          </p>
-        </div>
-        <div>
-          <h3>T Fashion AB, Logistics</h3>
-          <span class="date">(July 2021 - July 2023)</span>
-          <p>
-            As a logistics worker, my role includes collecting goods, packing
-            items for delivery, refunding returned orders, and maintaining
-            workplace tidiness.
-          </p>
-        </div>
-        <div>
-          <h3>Delivery-perfection Denmark, Courier</h3>
-          <span class="date">(November 2020 - June 2021)</span>
-        </div>
-        <div>
-          <h3>Delivery Hero, Foodora Rider</h3>
-          <span class="date">(October 2019 - November 2020)</span>
-          <p>
-            My role as a food courier involves delivery and direct contact
-            with restaurants and customers, following traffic laws for road
-            safety.
-          </p>
-        </div>
-        <div>
-          <h3>Middle East Restaurant, Restaurant Assistant</h3>
-          <span class="date">(January 2017 - October 2019)</span>
-          <p>
-            My role as a restaurant assistant includes serving tables,
-            maintaining cleanliness, organizing, and preparing dishes for
-            customers.
-          </p>
-        </div>
-      </div>
-      <hr>
-      <h2>Education</h2>
-      <div class="education">
-        <div>
-          <h3>IntensivePT.se, Personal Trainer and Nutritional Advisor</h3>
-          <span class="date">(July 2020 - May 2021)</span>
-        </div>
-        <div>
-          <h3>Eductus AB, Professional Swedish with Specialization in Service and Trade</h3>
-          <span class="date">(August 2017 - December 2017)</span>
-        </div>
-        <div>
-          <h3>High School Diploma, Science Studies</h3>
-          <span class="date">(Class of 2013)</span>
-        </div>
-      </div>
-    </div>
+    </header>
   </body>
 </html>
