--- a/homeworks/html-css/week01/Resume/index.html
+++ b/homeworks/html-css/week01/Resume/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="image.jpg" alt="Badr Alaref Photo">
+      <image class="img" src="image.jpg" alt="Badr Alaref Photo">
       <div class="container">
         <h1>CV Badr Alaref</h1>
         <div class="contact-info">
