--- a/homeworks/javascript1/week02/index.html
+++ b/homeworks/javascript1/week02/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My JavaScript homwork</title>
-    
+    <title>My JavaScript homework</title>
+    <script src="myscripts.js"></script>
 </head>
 <body>
     
